tests/NormalTests/paczka1/small_fuzzy/83356411.err
Error in line 3: gqXIyPgc2d A297 89,5
Error in line 8: X6AQEqZ S978 39,2
Error in line 9: gqXIyPgc2d S87 28,8
